--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
     <li>4 slices of chesse
       <ul>
           <li>cheddar</li>
-          <li>mozzarella</li>
+          <li>mozzerella</li>
           <li>pepper jack</li>
      </ul>
     </li>
     <li>1 tbsp of butter</li>
   </ul>
-
-  <h3>Top 5 Favorite Foods</h3>
-  <ol>
-    <li>Grilled Cheese</li>
-    <li>Sushi</li>
-    <li>Cheese and crackers</li>
-    <li>Cheese soup</li>
-    <li>Nacho Cheese French Fries</li>
-  </ol>
 
   <ol>
     <li>Spread butter on bread and frying pan</li>
