--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <ul>
     <li>2 slices of bread</li>
-    <li>4 slices of chesse
+    <li>4 slices of cheese
       <ul>
           <li>cheddar</li>
           <li>mozzerella</li>
